--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
   dialyzer:
     strategy:
       matrix:
-        elixir: ['1.10']
+        elixir: ['1.9', '1.10']
         otp: ['22.2']
         os: [ubuntu-latest]
 
@@ -34,7 +34,7 @@ jobs:
   test:
     strategy:
       matrix:
-        elixir: ['1.10']
+        elixir: ['1.9', '1.10']
         otp: ['22.2']
         os: [ubuntu-latest]
 
